# EtherealEngine

./: .gitmodules  .travis.yml  CMakeLists.txt
cmake/: macros.cmake
editor/: CMakeLists.txt
editor/editor_runtime/: CMakeLists.txt
editor/editor_runtime/assets/: asset_extensions.h  mesh_importer.cpp  mesh_importer.h
editor/editor_runtime/editing/: editing_system.cpp  editing_system.h  picking_system.cpp
editor/editor_runtime/interface/docks/: game_dock.cpp  hierarchy_dock.cpp  hierarchy_dock.h  inspector_dock.cpp  project_dock.cpp  scene_dock.cpp
editor/editor_runtime/interface/inspectors/: inspector.h  inspector_assets.cpp  inspector_entity.cpp  inspector_entity.h  inspector_math.cpp  inspectors.cpp
editor/editor_runtime/rendering/: debugdraw_system.cpp
editor/editor_runtime/system/: app.cpp  app.h  project_manager.cpp
engine/core/audio/: CMakeLists.txt  listener.cpp  listener.h  source.cpp  source.h
engine/core/cmd_line/: parser.hpp
engine/core/config/: CMakeLists.txt
engine/core/console/: CMakeLists.txt
engine/core/filesystem/: CMakeLists.txt
engine/core/filesystem/detail/: filesystem_includes.h  filesystem_os.h
engine/core/graphics/: CMakeLists.txt
engine/core/logging/: CMakeLists.txt
engine/core/math/: CMakeLists.txt
engine/core/serialization/: CMakeLists.txt  associative_archive.h
engine/core/simulation/: CMakeLists.txt
engine/core/string_utils/: CMakeLists.txt
engine/core/system/: CMakeLists.txt
engine/core/tasks/: CMakeLists.txt
engine/runtime/: CMakeLists.txt
engine/runtime/ecs/: _ecs.cpp  _ecs.h  ent.cpp  ent.h
engine/runtime/ecs/components/: audio_listener_component.h  audio_source_component.h  camera_component.h  light_component.cpp  light_component.h  model_component.cpp  model_component.h  reflection_probe_component.cpp  reflection_probe_component.h  relation.cpp  relation.h  transform_component.cpp  transform_component.h
engine/runtime/ecs/constructs/: prefab.cpp  prefab.h  (+6 more)
engine/runtime/rendering/: mesh.cpp  model.cpp  model.h  renderer.cpp
engine/runtime/system/: app.cpp  app.h  app_setup.cpp
test/: CMakeLists.txt
test/benchmarks/: CMakeLists.txt  simple.cpp
test/tests/: CMakeLists.txt  main.cpp
test/tests/editor/: default_scene.cpp
test/tests/engine/: test_mesh.cpp
test/tests/reflection/: reflection.cpp
test/tests/serialize/: serialize.cpp  utils.cpp
(+36 files in other folders)
